"fixed reset popup btns incorrectly overflowing"

--- a/frontend/src/app/components/activityTypes/_activity.scss
+++ b/frontend/src/app/components/activityTypes/_activity.scss
@@ -142,7 +142,7 @@
     }
     .reset-popup-btn-container{
         button{
-            margin: 0 1.5rem;
+            margin: 0 10%;
             margin-top: 1.5rem;
         }
         .reset-cancel-btn{
